--- a/model2.ipynb
+++ b/model2.ipynb
@@ -1059,7 +1059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorchEnv",
    "language": "python",
    "name": "python3"
   },
@@ -1073,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
